# LHI 회사오늘 길

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -192,7 +192,7 @@ html
                     .modal-body         
                         #container(style='margin-top: 0px;')
                             .sub_content
-                                script(type='text/javascript', src='https://maps.google.com/maps/api/js?key=AIzaSyDfKFxGuInn3pNoOiHIyOa0qxYqaDD40bI')
+                                script(type='text/javascript', src='https://maps.google.com/maps/api/js?key=AIzaSyCxP37XXc7zDZDaiewUvyyvpTPk_oIoOwU')
                                 #map_canvas.map_area
                                 script(type='text/javascript').
                                     $(function() {
@@ -226,19 +226,19 @@ html
                                         .col-md-3.text-center
                                             img(src='/isu/image/cus03.png', alt='자가용 이용시')
                                         .col-md-7
-                                            h4 &#xC790;&#xAC00;&#xC6A9; &#xC774;&#xC6A9;&#xC2DC;
-                                            p &#xD314;&#xB808;&#xC2A4; &#xD638;&#xD154; &#xBC29;&#xBA74;&#xC5D0;&#xC11C; &#xC624;&#xC2DC;&#xBA74; &#xBC18;&#xD3EC;&#xC804;&#xD654;&#xAD6D; &#xC55E;&#xC5D0;&#xC11C; &#xC720;&#xD134;&#xAC00;&#xB2A5;. &#xAC74;&#xBB3C; &#xB0B4; &#xC9C0;&#xD558;&#xC8FC;&#xD558;&#xC7A5; &#xC774;&#xC6A9;
+                                            h4 자가용 이용 시
+                                            p 팔레스 호텔 방면에서 오시면 반포전화국 앞에서 유턴가능. 건물 내 지하주하장 이용
                                 .cus-con
                                     .row
                                         .col-md-3.text-center
                                             img(src='/isu/image/cus04.png', alt='지하철 이용시')
                                         .col-md-7
-                                            h4 &#xC9C0;&#xD558;&#xCCA0; &#xC774;&#xC6A9;&#xC2DC;
+                                            h4 지하철 이용 시
                                             p
-                                                span.text-green 2&#xD638;&#xC120; &#xC11C;&#xCD08;&#xC5ED;
+                                                span.text-green 2호선 서초역 강남성모병원 7번 출구 → 21번 마을버스 → 반포전화국 하차
                                             p
-                                                span.text-blue 4&#xD638;&#xC120; &#xCD1D;&#xC2E0;&#xB300;&#xC5ED;
+                                                span.text-blue 4호선 총신대역 신세대웨딩홀 1번 출구 → 14번 마을버스 → 이수화학 빌딩
                                             p
-                                                span.text-brown 9&#xD638;&#xC120; &#xC2E0;&#xBC18;&#xD3EC;&#xC5ED;
+                                                span.text-brown 9호선 신반포역 반포종합운동장 4번 출구 → 10번/14번 마을버스 → 반포전화국 하차
                                             p
-                                                span.text-orange 3/7/9&#xD638;&#xC120; &#xACE0;&#xC18D;&#xBC84;&#xC2A4;&#xD130;&#xBBF8;&#xB110;&#xC5ED;
+                                                span.text-orange 3/7/9호선 고속버스터미널역 고속버스터미널역 8-1번 출구 → 10번/14번 마을버스 → 반포전화국 하차
