--- a/app/views/question/index.jade
+++ b/app/views/question/index.jade
@@ -1,7 +1,5 @@
-extends ../layouts/default
+extends ../layouts/admin
 block head
-    //meta(http-equiv='Content-Type' content='text/html,charset=utf-8')
-    script(src='/vendor/jquery/jquery.js')
     script(src='/views/question/index.js')
 block content
     div.alert.alert-danger.alert-dismissible(style='display:none')
