# KSY, 외부사용자관리 화면 수정

--- a/app/views/question/show.jade
+++ b/app/views/question/show.jade
@@ -11,7 +11,7 @@ block content
         div
             div
                 div
-                | 작성자 : #{question.name}
+                | 작성자 : #{question.author}
                 div
                     span 아이디 : #{question.user_id}
         div #{question.content}    
