--- a/app/views/usermanage/new.jade
+++ b/app/views/usermanage/new.jade
@@ -3,22 +3,38 @@ extends ../layouts/default
 block content
     .masthead.clearfix
         .inner
-            h3.masthead-brand 티켓등록
+            h3.masthead-brand 사용자 등록
             nav
                 ul.nav.masthead-nav
                     li.active
                         a(href='/usermanage') 목록
-                
+                        
             form.form.col-md-12.center-block(name='form' action='/usermanage/new' method='post')
                 .form-group
-                    input.form-control.input-lg(type='text' placeholder='Title' name='usermanage[title]' required value='')
+                    input.form-control.input-lg(name='usermanage[compannyNm]' type='text' placeholder='회사명' required value='')
                 .form-group
-                    input.form-control.input-lg(type='text' placeholder='작성자명' name='usermanage[name]' value='')
+                    input.form-control.input-lg(name='usermanage[userId]' type='text' placeholder='아이디' value='')
                 .form-group
-                    input.form-control.input-lg(type='email' placeholder='e-mail' name='usermanage[email]' value='')
+                    input.form-control.input-lg(name='usermanage[password]' type='text' placeholder='비밀번호' value='')
                 .form-group
-                    input.form-control.input-lg(type='text' placeholder='아이디' name='usermanage[user_id]' value='')
+                    input.form-control.input-lg(name='usermanage[userNm]' type='text' placeholder='사원명' required value='')
                 .form-group
-                    textarea.form-control.textarea(placeholder='내용' name='usermanage[content]' style='height:150px' value='')
+                    input.form-control.input-lg(name='usermanage[deptNm]' type='text' placeholder='부서명' value='')
+                .form-group
+                    input.form-control.input-lg(name='usermanage[jikwe]' type='text' placeholder='직위' value='')
+                .form-group
+                    input.form-control.input-lg(name='usermanage[jikchk]' type='text' placeholder='직책' required value='')
+                .form-group
+                    input.form-control.input-lg(name='usermanage[email]' type='email' placeholder='e-mail' value='')
+                .form-group
+                    input.form-control.input-lg(name='usermanage[hpNo]' type='text' placeholder='핸드폰번호' value='')
+                .form-group
+                    input.form-control.input-lg(name='usermanage[birthdayDt]' type='text' placeholder='생년월일' value='')
+                .form-group
+                    input.form-control.input-lg(name='usermanage[post]' type='text' placeholder='우편번호' value='')
+                .form-group
+                    input.form-control.input-lg(name='usermanage[address]' type='text' placeholder='회사주소' required value='')
+                .form-group
+                    input.form-control.input-lg(name='usermanage[callNo]' type='text' placeholder='회사전화번호' value='')
                 .form-group
                     button.btn.btn-success.btn-lg.btn-block(type='submit') 저장
