--- a/app/views/usermanage/show.jade
+++ b/app/views/usermanage/show.jade
@@ -3,9 +3,9 @@ extends ../layouts/default
 block content
     div.container
         div
-            button.btn.btn-primary.btn-signup(onclick="location.href='/usermanage'") Back
-            button.btn.btn-primary.btn-info(onclick="location.href='/usermanage/#{usermanage._id}/edit'") Edit
-            button.btn.btn-primary.btn-danger(onclick="location.href='/usermanage/#{usermanage._id}/delete'") Delete
+            button.btn.btn-primary.btn-signup(onclick="location.href='/usermanage'") 목록
+            button.btn.btn-primary.btn-info(onclick="location.href='/usermanage/#{usermanage._id}/edit'") 수정
+            button.btn.btn-primary.btn-danger(onclick="location.href='/usermanage/#{usermanage._id}/delete'") 삭제
         h3
             span Title : #{usermanage.title}
         div
